@@ -5,3 +5,4 @@
 	* src/System/Environment/Parser/Database.hs: Introduced DBConnection type with FromEnv instance
 	* src/System/Environment/Parser/Internal.hs: Introduced FromEnv for Data.Time types
 	* src/System/Environment/Parser/Encoded.hs: Added encoded bytestring types
+	* src/System/Environment/Parser/Internal.hs: Introduced Aeson Value FromEnv instances
